# shakespearemon

./: Cargo.toml  Dockerfile  README.md  config.toml
src/: lib.rs  main.rs  settings.rs  translation_service.rs
src/poke/: mod.rs  poke_client.rs  poke_client_exception.rs  poke_species_response.rs  pokemon.rs
src/shakespeare/: mod.rs  shakespeare_client.rs  shakespeare_client_exception.rs  shakespeare_translation_request.rs  shakespeare_translation_response.rs
src/shakespearean/: mod.rs
tests/: api.rs
tests/api/: api.rs  helpers.rs  main.rs
