[package]
name = "shakespearemon"
version = "0.1.0"
authors = ["ozer <ozer.cevikaslan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
surf = "2.2.0"
anyhow = "1.0"
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wiremock = "0.5"
async-std = { version = "1.8.0", features = ["attributes"] }