[package]
name = "shakespearemon"
version = "0.1.0"
authors = ["ozer <ozer.cevikaslan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shakespearemon"

[dependencies]
actix-web = { version = "3" }
surf = "2.2.0"
thiserror = "1.0.24"
derive_more = "0.99.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.10"

[dev-dependencies]
wiremock = "0.5"
actix-rt = "2.1.0"